--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev librsvg2-dev
+        sudo apt-get install -y libgtk-3-0 libnss3 libasound2t64 libgbm1 libxss1
 
     - name: Download Tor Expert Bundle for Linux
       run: |
