Add x64ArchFiles for universal macOS builds

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
             "**/*"
           ]
         }
-      ]
+      ],
+      "x64ArchFiles": "Contents/Resources/mac/tor/**/*"
     },
     "win": {
       "icon": "public/icon.ico",
